--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-     <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Tomas Mozdren">
     <title>UraniumNote</title>
-    <link rel='stylesheet' href='style.css'>
-    <link rel="icon" type="image/png" href="logo.png">
+    <link href="style.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	  <link href="css/portfolio.css" rel="stylesheet">
+    <link href="css/portfolio.css" rel="stylesheet">
     <link href="css/stylish-portfolio.css" rel="stylesheet">
-  </head>
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
+    <link rel="icon" type="image/png" href="logo.png"/>
+    <script async="" src="https://www.google-analytics.com/analytics.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
   <body>
     <main>
       <h style="padding-left: 2%;"><b>How to use the app</b></h><br>
@@ -20,7 +37,7 @@
       <h style="padding-left: 2%;">To edit a note just click on the note you want to edit and click on <b>To Editor</b> where you can edit your note. Then click the appropriate Move button once you are done editing.</h><br><br>
       <aside class='topNav nav-blue'>
       <div class='container navBar'>
-      <button style="float:center; text-align:center;" onclick="scrollDown()" id="btn-mvtoeditor">To Editor</button>
+      <section id="topCon"><a href="#botCon"><button style="float:center; text-align:center;" id="btn-mvtoeditor">To Editor</button></a></section>
       </div>
       </aside>
       <div class="headers">
@@ -49,7 +66,8 @@
       <span id="edit-mode" class="no-display">
       </span>
       <br>
-      <aside class='topNav nav-blue' id='topNav'>
+      <section id="botCon">
+      <aside class='topNav nav-blue'>
         <div class='container navBar'>
           <div id='color-select'>
             <div class='color-box white'></div>
@@ -59,6 +77,7 @@
           </div>
         </div>
       </aside>
+    </section>
       <notepad>
         <div id="note-title">
           <input id="title-field" type="text" placeholder="title your note">
@@ -68,26 +87,58 @@
         </div>
       </notepad>
     </main>
+    <div class='nav-blue'>
     <aside class='topNav nav-blue' id='topNav'>
     <footer>
-      <button onclick="scrollUp()" id="btn-rtrntnts">Return to notes</button>
-      <button onclick="scrollUp()" id="btn-save2">Move to Planned</button>
-      <button onclick="scrollUp()" id="btn-save">Move to Current</button>
-      <button onclick="scrollUp()" id="btn-save1">Move to Done</button>
+      <a style="text-decoration: none;color: white;" href="#topCon"><button id="btn-rtrntnts">Return to notes</button></a>
+      <button id="btn-save2">Move to Planned</button>
+      <button id="btn-save">Move to Current</button>
+      <button id="btn-save1">Move to Done</button>
       <button id="btn-new">New</button>
       <button id="btn-delete">Delete / Clear</button>
       <br>
     </footer>
   </aside>
+  </div>
+  <footer>
+      <div id="contact" class="container">
+          <div class="row">
+              <div class="col-lg-10 col-lg-offset-1 text-center">
+                  <h4><strong>Thomas Mozdren Software Development</strong>
+                  </h4>
+
+                  <ul class="list-unstyled">
+                      <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:mozdrent@gmail.com">mozdrent@gmail.com</a></li>
+                  </ul>
+                  <br>
+                  <ul class="list-inline">
+                      <li>
+                          <a target="_blank" href="https://www.linkedin.com/in/tom%C3%A1%C5%A1-mozd%C5%99e%C5%88-3382b71a6/"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
+                      </li>
+                      <li>
+                          <a target="_blank" href="https://twitter.com/beangreen247"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                      </li>
+                      <li>
+                          <a target="_blank" href="https://www.youtube.com/channel/UCQbA5Nc4oq6uMS2idDWsxkw"><i class="fa fa-youtube-play fa-fw fa-3x"></i></a>
+                      </li>
+                      <li>
+                          <a target="_blank" href="https://github.com/BeanGreen247"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                      </li>
+                      <li>
+                          <a target="_blank" href="https://join.slack.com/t/tomasmozdren/shared_invite/enQtNzAxNTY1Nzg1MDEwLTVhMmQ4YTU5ZGMyZTFlMzc3NTQ0ZTMxMGUzYTYzMzlmZTZmNmU3ZDk5NzdiYzc3MDNiNDZlMGRlZjUwMTdlMDk"><i class="fa fa-slack fa-fw fa-3x"></i></a>
+                      </li>
+                      <li>
+                          <a target="_blank" href="https://www.instagram.com/beangreen247/"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
+                      </li>
+                  </ul>
+                  <hr class="small">
+                  <p class="text-muted">Copyright &copy;  beangreen247.github.io 2020</p>
+                  <a href="pages/privacy.html">Privacy Policy</a>
+              </div>
+          </div>
+      </div>
+  </footer>
   </body>
   <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js'></script>
   <script type='text/javascript' src='js/app.js'></script>
-  <script>
-    function scrollUp() {
-      window.scrollBy(0, -800);
-    }
-    function scrollDown() {
-      window.scrollBy(0, 1000);
-    }
-</script>
 </html>
