--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <![endif]-->
 </head>
   <body>
+  
+	<script type="text/javascript" src="js/headerScript.js"> </script>
+  
     <main>
       <h style="padding-left: 2%;"><b>How to use the app</b></h><br>
       <h style="padding-left: 2%;">Create a new note and move it to planned notes, by pressing the <b>New</b> button and <b>Move to Planned</b> button at the bottom.</h><br>
@@ -101,43 +104,47 @@
   </aside>
   </div>
   <footer>
-      <div id="contact" class="container">
-          <div class="row">
-              <div class="col-lg-10 col-lg-offset-1 text-center">
-                  <h4><strong>Thomas Mozdren Software Development</strong>
-                  </h4>
+        <div id="contact" class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h4><strong>Thomas Mozdren Software Development</strong>
+                    </h4>
 
-                  <ul class="list-unstyled">
-                      <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:mozdrent@gmail.com">mozdrent@gmail.com</a></li>
-                  </ul>
-                  <br>
-                  <ul class="list-inline">
-                      <li>
-                          <a target="_blank" href="https://www.linkedin.com/in/tom%C3%A1%C5%A1-mozd%C5%99e%C5%88-3382b71a6/"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
-                      </li>
-                      <li>
-                          <a target="_blank" href="https://twitter.com/beangreen247"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                      </li>
-                      <li>
-                          <a target="_blank" href="https://www.youtube.com/channel/UCQbA5Nc4oq6uMS2idDWsxkw"><i class="fa fa-youtube-play fa-fw fa-3x"></i></a>
-                      </li>
-                      <li>
-                          <a target="_blank" href="https://github.com/BeanGreen247"><i class="fa fa-github fa-fw fa-3x"></i></a>
-                      </li>
-                      <li>
-                          <a target="_blank" href="https://join.slack.com/t/tomasmozdren/shared_invite/enQtNzAxNTY1Nzg1MDEwLTVhMmQ4YTU5ZGMyZTFlMzc3NTQ0ZTMxMGUzYTYzMzlmZTZmNmU3ZDk5NzdiYzc3MDNiNDZlMGRlZjUwMTdlMDk"><i class="fa fa-slack fa-fw fa-3x"></i></a>
-                      </li>
-                      <li>
-                          <a target="_blank" href="https://www.instagram.com/beangreen247/"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
-                      </li>
-                  </ul>
-                  <hr class="small">
-                  <p class="text-muted">Copyright &copy;  beangreen247.github.io 2020</p>
-                  <a href="pages/privacy.html">Privacy Policy</a>
-              </div>
-          </div>
-      </div>
-  </footer>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:mozdrent@gmail.com">mozdrent@gmail.com</a></li>
+                    </ul>
+                    <br>
+                    <ul class="list-inline">
+                        <li>
+                            <a title="My Linkedin" target="_blank" href="https://www.linkedin.com/in/tom%C3%A1%C5%A1-mozd%C5%99e%C5%88-3382b71a6/"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a title="My Twitter" target="_blank" href="https://twitter.com/beangreen247"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a title="Main channel" target="_blank" href="https://www.youtube.com/channel/UCQbA5Nc4oq6uMS2idDWsxkw"><i class="fa fa-youtube-play fa-fw fa-3x"></i></a>
+                        </li>
+						<li>
+                            <a title="Music channel" target="_blank" href="https://www.youtube.com/channel/UC_Qo-mebrSPXU7EpkyJfJ0g"><i class="fa fa-youtube-play fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a title="My GitHub" target="_blank" href="https://github.com/BeanGreen247"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a title="My Slack" target="_blank" href="https://join.slack.com/t/tomasmozdren/shared_invite/enQtNzAxNTY1Nzg1MDEwLTVhMmQ4YTU5ZGMyZTFlMzc3NTQ0ZTMxMGUzYTYzMzlmZTZmNmU3ZDk5NzdiYzc3MDNiNDZlMGRlZjUwMTdlMDk"><i class="fa fa-slack fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a title="My Instagram" target="_blank" href="https://www.instagram.com/beangreen247/"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
+                        </li>
+                    </ul>
+                    <hr class="small">
+                    <p class="text-muted">Copyright &copy;  beangreen247.github.io 2020</p>
+                    <a href="pages/privacy.html">Privacy Policy</a>
+                </div>
+            </div>
+        </div>
+        <a id="to-top" href="#topNav" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
+    </footer>
   </body>
   <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js'></script>
   <script type='text/javascript' src='js/app.js'></script>
