--- a/index.html
+++ b/index.html
@@ -9,40 +9,34 @@
     <meta name="author" content="Tomas Mozdren">
     <title>UraniumNote</title>
     <link href="style.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/portfolio.css" rel="stylesheet">
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="logo.png"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
-    <link rel="icon" type="image/png" href="logo.png"/>
-    <script async="" src="https://www.google-analytics.com/analytics.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
   <body>
   
 	<script type="text/javascript" src="js/headerScript.js"> </script>
   
+  <div class="headername">
+    <img src="logo.png" width="5%" height="5%"></img>
+  <h1><b>UraniumNote</b></h1>
+  </div>
+
     <main>
-      <h style="padding-left: 2%;"><b>How to use the app</b></h><br>
+      <div id="about"; class="maintext">
+        <h2 style="font-size: 35px;margin-bottom: 0px;"><b>How to use the app</b></h1>
+            <hr class="small">
       <h style="padding-left: 2%;">Create a new note and move it to planned notes, by pressing the <b>New</b> button and <b>Move to Planned</b> button at the bottom.</h><br>
       <h style="padding-left: 2%;">Once you are ready to do the task click on the note in <b>Planned</b> and click <b>Move to Current</b>.</h><br>
       <h style="padding-left: 2%;">Once you have finished the task, you can move it to the <b>Done</b> list by clicking <b>Move to Done</b>.</h><br>
       <h style="padding-left: 2%;">To remove a note use the <b>Delete/Clear</b> button.</h><br>
       <h style="padding-left: 2%;">To edit a note just click on the note you want to edit and click on <b>To Editor</b> where you can edit your note. Then click the appropriate Move button once you are done editing.</h><br><br>
-      <aside class='topNav nav-blue'>
-      <div class='container navBar'>
+        </div>
+        <div class="maintext">
       <section id="topCon"><a href="#botCon"><button style="float:center; text-align:center;" id="btn-mvtoeditor">To Editor</button></a></section>
       </div>
-      </aside>
+      <div id="websites" class="secondarytext">
       <div class="headers">
         <div id="list-head">
           <b>Planned</b>
@@ -66,9 +60,13 @@
         <div id='listed1'>
         </div>
       </noteList>
+    </div>
+
+    <div id="about"; class="maintext">
       <span id="edit-mode" class="no-display">
       </span>
-      <br>
+    </div>
+      <div id="about"; class="maintext">
       <section id="botCon">
       <aside class='topNav nav-blue'>
         <div class='container navBar'>
@@ -81,6 +79,9 @@
         </div>
       </aside>
     </section>
+  </div>
+
+  <div id="websites" class="secondarytext">
       <notepad>
         <div id="note-title">
           <input id="title-field" type="text" placeholder="title your note">
@@ -89,8 +90,9 @@
           <textarea id="body-field"></textarea>
         </div>
       </notepad>
+    </div>
     </main>
-    <div class='nav-blue'>
+    <div class="maintext">
     <aside class='topNav nav-blue' id='topNav'>
     <footer>
       <a style="text-decoration: none;color: white;" href="#topCon"><button id="btn-rtrntnts">Return to notes</button></a>
@@ -103,48 +105,40 @@
     </footer>
   </aside>
   </div>
-  <footer>
-        <div id="contact" class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Thomas Mozdren Software Development</strong>
-                    </h4>
-
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:mozdrent@gmail.com">mozdrent@gmail.com</a></li>
-                    </ul>
-                    <br>
-                    <ul class="list-inline">
-                        <li>
-                            <a title="My Linkedin" target="_blank" href="https://www.linkedin.com/in/tom%C3%A1%C5%A1-mozd%C5%99e%C5%88-3382b71a6/"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a title="My Twitter" target="_blank" href="https://twitter.com/beangreen247"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a title="Main channel" target="_blank" href="https://www.youtube.com/channel/UCQbA5Nc4oq6uMS2idDWsxkw"><i class="fa fa-youtube-play fa-fw fa-3x"></i></a>
-                        </li>
-						<li>
-                            <a title="Music channel" target="_blank" href="https://www.youtube.com/channel/UC_Qo-mebrSPXU7EpkyJfJ0g"><i class="fa fa-youtube-play fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a title="My GitHub" target="_blank" href="https://github.com/BeanGreen247"><i class="fa fa-github fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a title="My Slack" target="_blank" href="https://join.slack.com/t/tomasmozdren/shared_invite/enQtNzAxNTY1Nzg1MDEwLTVhMmQ4YTU5ZGMyZTFlMzc3NTQ0ZTMxMGUzYTYzMzlmZTZmNmU3ZDk5NzdiYzc3MDNiNDZlMGRlZjUwMTdlMDk"><i class="fa fa-slack fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a title="My Instagram" target="_blank" href="https://www.instagram.com/beangreen247/"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
-                        </li>
-                    </ul>
-                    <hr class="small">
-                    <p class="text-muted">Copyright &copy;  beangreen247.github.io 2020</p>
-                    <a href="pages/privacy.html">Privacy Policy</a>
-                </div>
-            </div>
+  <div id="contacts" class="maintext">
+    <footer>
+        <h2><strong>Thomas Mozdren Software Development</strong></h2>
+                        <ul class="list-unstyled">
+                            <li>Email:  <a href="mailto:mozdrent@gmail.com">mozdrent@gmail.com</a></li>
+                        </ul>
+                        <ul class="botbar">
+                            <li>
+                                <a title="My Linkedin" target="_blank" href="https://www.linkedin.com/in/tom%C3%A1%C5%A1-mozd%C5%99e%C5%88-3382b71a6/">Linkedin</a>
+                            </li>
+                            <li>
+                                <a title="My Twitter" target="_blank" href="https://twitter.com/beangreen247">Twitter</a>
+                            </li>
+                            <li>
+                                <a title="Main channel" target="_blank" href="https://www.youtube.com/channel/UCQbA5Nc4oq6uMS2idDWsxkw">Main YT channel</a>
+                            </li>
+                            <li>
+                                <a title="Music channel" target="_blank" href="https://www.youtube.com/channel/UC_Qo-mebrSPXU7EpkyJfJ0g">Music YT channel</a>
+                            </li>
+                            <li>
+                                <a title="My GitHub" target="_blank" href="https://github.com/BeanGreen247">GitHub</a>
+                            </li>
+                            <li>
+                                <a title="My Slack" target="_blank" href="https://join.slack.com/t/tomasmozdren/shared_invite/enQtNzAxNTY1Nzg1MDEwLTVhMmQ4YTU5ZGMyZTFlMzc3NTQ0ZTMxMGUzYTYzMzlmZTZmNmU3ZDk5NzdiYzc3MDNiNDZlMGRlZjUwMTdlMDk">Slack</a>
+                            </li>
+                            <li>
+                                <a title="My Instagram" target="_blank" href="https://www.instagram.com/beangreen247/">Instagram</a>
+                            </li>
+                        </ul>
+                        <hr class="small">
+                        <p class="text-muted">Copyright ©  beangreen247.github.io 2020</p>
+                        <a href="pages/privacy.html">Privacy Policy</a>
+            </footer>
         </div>
-        <a id="to-top" href="#topNav" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
-    </footer>
   </body>
   <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js'></script>
   <script type='text/javascript' src='js/app.js'></script>
