--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" href="logo.png"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
+	<script data-ad-client="ca-pub-9992917351817930" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171246424-1"></script>
 	<script>
